--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "copy-folder-contents",
-  "displayName": "Copy Folder Contents",
+  "name": "folder-to-clipboard",
+  "displayName": "Folder to Clipboard",
+  "publisher": "ChristosKoutsiaris",
   "description": "Copies all file paths and their contents from a selected folder to clipboard.",
   "version": "1.0.0",
-  "publisher": "ChristosKoutsiaris",
   "repository": {
     "type": "git",
-    "url": "https://github.com/unseen1980/copy-folder-contents.git"
+    "url": "https://github.com/unseen1980/folder-to-clipboard.git"
   },
   "engines": {
     "vscode": "^1.70.0"
@@ -40,17 +40,20 @@
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile",
     "prepackage": "npm run compile",
-    "package": "vsce package",
-    "publish": "vsce publish",
+    "package": "npx @vscode/vsce package",
+    "publish": "npx @vscode/vsce publish",
     "lint": "eslint 'src/**/*.ts'",
     "format": "prettier --write 'src/**/*.ts'",
-    "test": "mocha --require ts-node/register 'test/**/*.test.ts'"
+    "clean": "rm -rf out *.vsix",
+    "compile:test": "tsc -p tsconfig.test.json",
+    "test": "npm run compile:test && mocha --require ts-node/register 'test/**/*.test.ts'"
   },
   "devDependencies": {
     "@types/chai": "^5.2.1",
     "@types/mocha": "^10.0.10",
     "@types/node": "^18.0.0",
     "@types/vscode": "^1.70.0",
+    "@vscode/vsce": "^3.3.2",
     "chai": "^5.2.0",
     "eslint": "^9.23.0",
     "eslint-config-prettier": "^10.1.1",
@@ -59,7 +62,6 @@
     "prettier": "^3.5.3",
     "ts-node": "^10.9.2",
     "typescript": "^4.7.4",
-    "vsce": "2.15.0",
     "vscode-test": "^1.6.1"
   }
 }
