--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,10 @@
     "outDir": "out",
     "lib": ["es6"],
     "sourceMap": true,
-    "rootDir": ".",
+    "rootDir": "src",
     "strict": true,
     "esModuleInterop": true
   },
-  "include": ["src", "test"],
-  "exclude": ["node_modules", ".vscode-test", "out"]
+  "include": ["src"],
+  "exclude": ["node_modules", ".vscode-test", "out", "test"]
 }
